--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,8 @@ img{
 }
 body{ 
     font-family: Roboto, sans-serif;
-    color: #2f2e42;
+    color: #434455;
+    background-color: FFFFFF;
 }
 .enother-color-logo{
     color: #4d5ae5
