--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ img{
 body{ 
     font-family: Roboto, sans-serif;
     color: #434455;
-    background-color: FFFFFF;
+    background-color: #FFFFFF;
 }
 .enother-color-logo{
     color: #4d5ae5
