--- a/css/style.css
+++ b/css/style.css
@@ -14,10 +14,10 @@ img{
     font-family: "Raleway", sans-serif;
         font-weight: 700;
         font-size: 18px;
-        line-height: 1.16667;
+        line-height: 1.17;
         letter-spacing: 0.03em;
         text-transform: uppercase;
-        color: #2e2f42;
+        color: #4d5ae5;
 }
 body{ 
     font-family: Roboto, sans-serif;
@@ -25,7 +25,7 @@ body{
     background-color: #FFFFFF;
 }
 .enother-color-logo{
-    color: #4d5ae5
+    color: #2e2f42
 }
 
 .header-address .link{
@@ -43,6 +43,10 @@ body{
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #2e2f42;
+}
+.nav-menu .link:hover,
+.nav-menu .link:focus{
+    color: #404bbf
 }
 .page-tytle{
     font-family: "Roboto", sans-serif;
