--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ body{
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+    font-style: normal;
 }
 .nav-menu .link{
     font-family: "Roboto", sans-serif;
