--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,10 @@ body{
     color: #434455;
     font-style: normal;
 }
+.header-address .link:hover
+.header-address .link:focus{
+    color: #404bbf;
+}
 .nav-menu .link{
     font-family: "Roboto", sans-serif;
         font-weight: 500;
