--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ body{
     color: #434455;
     font-style: normal;
 }
-.header-address .link:hover
+.header-address .link:hover,
 .header-address .link:focus{
     color: #404bbf;
 }
