--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,8 @@ body{
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+}
+.header-address{
     font-style: normal;
 }
 .header-address .link:hover,
