--- a/css/style.css
+++ b/css/style.css
@@ -1,34 +1,41 @@
-ul, ol{
+ul,
+ol {
     list-style-type: none;
 }
-a{
+
+a {
     text-decoration: none;
 }
-button{
+
+button {
     cursor: pointer;
 }
-img{
+
+img {
     display: block;
 }
-.logo{
+
+.logo {
     font-family: "Raleway", sans-serif;
-        font-weight: 700;
-        font-size: 18px;
-        line-height: 1.17;
-        letter-spacing: 0.03em;
-        text-transform: uppercase;
-        color: #4d5ae5;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
 }
-body{ 
+
+body {
     font-family: Roboto, sans-serif;
     color: #434455;
     background-color: #FFFFFF;
 }
-.enother-color-logo{
-    color: #2e2f42
+
+.enother-color-logo {
+    color: #2e2f42;
 }
 
-.header-address .link{
+.header-address .link {
     font-family: "Roboto", sans-serif;
     font-weight: 400;
     font-size: 16px;
@@ -36,76 +43,87 @@ body{
     letter-spacing: 0.02em;
     color: #434455;
 }
-.header-address{
+
+.header-address {
     font-style: normal;
 }
+
 .header-address .link:hover,
-.header-address .link:focus{
+.header-address .link:focus {
     color: #404bbf;
 }
-.nav-menu .link{
+
+.nav-menu .link {
     font-family: "Roboto", sans-serif;
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
-        color: #2e2f42;
-}
-.nav-menu .link:hover,
-.nav-menu .link:focus{
-    color: #404bbf
-}
-.page-tytle{
-    font-family: "Roboto", sans-serif;
-        font-weight: 700;
-        font-size: 56px;
-        line-height: 1.07143;
-        letter-spacing: 0.02em;
-        text-align: center;
-        color: #fff;
-}
-#studio{
-    background-color: #2e2f42;
-}
-.text-section{
-    font-family: "Roboto", sans-serif;
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
-        text-align: center;
-        color: #434455;
-}
-.about-us{
-    font-family: "Roboto", sans-serif;
-        font-weight: 500;
-        font-size: 20px;
-        line-height: 1.2;
-        letter-spacing: 0.02em;
-        color: #2e2f42;
-}
-.about-page{
-    font-family: "Roboto", sans-serif;
-        font-weight: 700;
-        font-size: 36px;
-        line-height: 1.11111;
-        letter-spacing: 0.02em;
-        text-transform: capitalize;
-        text-align: center;
-        color: #2e2f42;
-}
-.page-footer{
-    background-color: #2e2f42;
-}
-.span-footer{
-    color: #f4f4fd
-}
-.footer-text{
-    font-family: "Roboto", sans-serif;
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
-        color: #f4f4fd;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
 }
 
+.nav-menu .link:hover,
+.nav-menu .link:focus {
+    color: #404bbf;
+}
+
+.page-title {
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    font-size: 56px;
+    line-height: 1.07143;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #fff;
+}
+
+#studio {
+    background-color: #2e2f42;
+}
+
+.text-section {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #434455;
+}
+
+.about-us {
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+}
+
+.about-page {
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11111;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    text-align: center;
+    color: #2e2f42;
+}
+
+.page-footer {
+    background-color: #2e2f42;
+}
+
+.span-footer {
+    color: #f4f4fd;
+}
+
+.footer-text {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+}
