--- a/css/style.css
+++ b/css/style.css
@@ -110,12 +110,21 @@ body {
     letter-spacing: 0.02em;
     color: #2e2f42;
 }
-
+.menu-about-page{
+    font-family: "Roboto", sans-serif;
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+        text-transform: capitalize;
+        text-align: center;
+        color: #2e2f42;
+}
 .about-page {
     font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-size: 36px;
-    line-height: 1.1;
+    line-height: 1.11;
     letter-spacing: 0.02em;
     text-transform: capitalize;
     text-align: center;
