--- a/css/style.css
+++ b/css/style.css
@@ -147,6 +147,11 @@ body {
     letter-spacing: 0.02em;
     color: #f4f4fd;
 }
-.section-4{
-
+.contacts .about-us-team{
+background-color: #FFFFFF;
+font-weight: 500;
+font-size: 20px;
+line-height: 1.2;
+letter-spacing: 0.02em;
+color: #2e2f42;
 }
