--- a/css/style.css
+++ b/css/style.css
@@ -155,3 +155,9 @@ line-height: 1.2;
 letter-spacing: 0.02em;
 color: #2e2f42;
 }
+.contacts{
+    background-color: #F4F4FD;
+}
+.contacts .list{
+    background-color: #FFFFFF;
+}
