--- a/css/style.css
+++ b/css/style.css
@@ -154,7 +154,7 @@ line-height: 1.2;
 letter-spacing: 0.02em;
 color: #2e2f42;
 }
-.contacts .list{
+.contacts .list-item{
     background-color: #FFFFFF;
 }
 .contacts{
