--- a/css/style.css
+++ b/css/style.css
@@ -7,14 +7,6 @@ a {
     text-decoration: none;
 }
 
-button {
-    cursor: pointer;
-}
-
-img {
-    display: block;
-}
-
 .logo {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
@@ -82,6 +74,7 @@ body {
     line-height: 1.5;
     letter-spacing: 0.04em;
     color: #ffffff;
+    cursor: pointer;;
 }
 .btn:hover,
 .btn:focus{
